--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.birdsspeciesclassification">
+    package="birds.species.birdsspeciesclassification">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
@@ -18,7 +18,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name="birds.species.birdsspeciesclassification.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -29,7 +29,7 @@
 
         <!-- Add ResultActivity declaration -->
         <activity
-            android:name=".ui.search.ResultActivity"
+            android:name="birds.species.birdsspeciesclassification.ui.search.ResultActivity"
             android:label="ResultActivity"/>
 
 
